--- a/pom.xml
+++ b/pom.xml
@@ -119,12 +119,12 @@
       <version>0.6.0-SNAPSHOT</version>
     </dependency>
 
-    <!--<dependency>-->
-      <!--<groupId>org.actframework</groupId>-->
-      <!--<artifactId>act</artifactId>-->
-      <!--<version>0.1.3-SNAPSHOT</version>-->
-      <!--<scope>provided</scope>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.actframework</groupId>
+      <artifactId>act</artifactId>
+      <version>0.2.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
 
   </dependencies>
 
