--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
   ~ under the License.
   -->
 <!-- history
+0.3.0-SNAPSHOT
+- update tool to 0.10.0
 0.2.0-SNAPSHOT
 - Refactory code and simplified Loader/Filter API
 - Inject event dispatching
@@ -29,7 +31,7 @@
   <groupId>org.osgl</groupId>
   <artifactId>genie</artifactId>
   <packaging>jar</packaging>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.3.0-SNAPSHOT</version>
 
   <name>OSGL Genie</name>
   <description>A JSR330 style dependency injection solution</description>
@@ -77,8 +79,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.3</version>
           <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
+            <source>1.7</source>
+            <target>1.7</target>
           </configuration>
         </plugin>
         <plugin>
@@ -110,14 +112,8 @@
 
     <dependency>
       <groupId>org.osgl</groupId>
-      <artifactId>osgl-tool</artifactId>
-      <version>0.9.0-SNAPSHOT</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.osgl</groupId>
       <artifactId>osgl-logging</artifactId>
-      <version>0.6.0-SNAPSHOT</version>
+      <version>[0.7.0-SNAPSHOT,)</version>
     </dependency>
 
     <dependency>
