--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 <!-- history
 0.5.0-SNAPSHOT
 - BeanSpec: add isInstance(Object) API
+- BeanSpec: add Set<Annotation> qualifiers() API
 0.4.0-SNAPSHOT
 - BeanSpec: API to test field modifiers (only applied to bean spec constructed from a field
 0.3.0-SNAPSHOT
