--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
   <groupId>org.osgl</groupId>
   <artifactId>genie</artifactId>
   <packaging>jar</packaging>
-  <version>0.5.0-SNAPSHOT</version>
+  <version>0.5.0-yb-SNAPSHOT</version>
 
   <name>OSGL Genie</name>
   <description>A JSR330 style dependency injection solution</description>
@@ -119,7 +119,7 @@
     <dependency>
       <groupId>org.osgl</groupId>
       <artifactId>osgl-logging</artifactId>
-      <version>[0.7.0-SNAPSHOT,)</version>
+      <version>0.7.0-yb-SNAPSHOT</version>
     </dependency>
 
     <dependency>
