--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
+    <osgl-logging.version>0.7.0-SNAPSHOT</osgl-logging.version>
     <maven.test.skip>false</maven.test.skip>
   </properties>
 
@@ -119,7 +119,7 @@
     <dependency>
       <groupId>org.osgl</groupId>
       <artifactId>osgl-logging</artifactId>
-      <version>[0.7.0-SNAPSHOT,)</version>
+      <version>${osgl-logging.version}</version>
     </dependency>
 
     <dependency>
