--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
   ~ under the License.
   -->
 <!-- history
+1.0.0
+- Baseline on 0.5.0
 0.5.0-SNAPSHOT
 - BeanSpec: add isInstance(Object) API
 - BeanSpec: add Set<Annotation> qualifiers() API
@@ -37,7 +39,7 @@
   <groupId>org.osgl</groupId>
   <artifactId>genie</artifactId>
   <packaging>jar</packaging>
-  <version>0.5.0-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
 
   <name>OSGL Genie</name>
   <description>A JSR330 style dependency injection solution</description>
@@ -58,7 +60,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <osgl-logging.version>0.7.0-SNAPSHOT</osgl-logging.version>
+    <osgl-logging.version>1.0.0</osgl-logging.version>
     <maven.test.skip>false</maven.test.skip>
   </properties>
 
