--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,7 @@
 0.1.0-SNAPSHOT
 - base verion when history log started
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -156,9 +155,34 @@
 
   <profiles>
     <profile>
-      <id>dist</id>
+      <id>release</id>
       <build>
         <plugins>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.3</version>
+            <extensions>true</extensions>
+            <configuration>
+              <serverId>ossrh</serverId>
+              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>true</autoReleaseAfterClose>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-assembly-plugin</artifactId>
@@ -191,6 +215,14 @@
             <configuration>
               <stylesheetfile>src/etc/javadoc.css</stylesheetfile>
               <quiet />
+              <additionalparam>-Xdoclint:none</additionalparam>
+              <doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
+              <docletArtifact>
+                <groupId>ch.raffael.pegdown-doclet</groupId>
+                <artifactId>pegdown-doclet</artifactId>
+                <version>1.1</version>
+              </docletArtifact>
+              <useStandardDocletOptions>true</useStandardDocletOptions>
             </configuration>
             <executions>
               <execution>
@@ -199,12 +231,19 @@
                 <goals>
                   <goal>javadoc</goal>
                 </goals>
+                <configuration>
+                  <failOnError>false</failOnError>
+                </configuration>
               </execution>
               <execution>
                 <id>attach-javadocs</id>
                 <goals>
                   <goal>jar</goal>
                 </goals>
+                <configuration> <!-- add this to disable checking -->
+                  <failOnError>false</failOnError>
+                  <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
               </execution>
             </executions>
           </plugin>
@@ -215,7 +254,7 @@
               <execution>
                 <id>attach-sources</id>
                 <goals>
-                  <goal>jar</goal>
+                  <goal>jar-no-fork</goal>
                 </goals>
               </execution>
             </executions>
