--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
   ~ under the License.
   -->
 <!-- history
+1.0.1
+- Use version range for osgl dependencies
 1.0.0
 - Baseline on 0.5.0
 0.5.0-SNAPSHOT
@@ -38,7 +40,7 @@
   <groupId>org.osgl</groupId>
   <artifactId>genie</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0</version>
+  <version>1.0.1</version>
 
   <name>OSGL Genie</name>
   <description>A JSR330 style dependency injection solution</description>
@@ -59,7 +61,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <osgl-logging.version>1.0.0</osgl-logging.version>
+    <osgl-logging.version>[1.0.0,2.0.0)</osgl-logging.version>
     <maven.test.skip>false</maven.test.skip>
   </properties>
 
