--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
   ~ under the License.
   -->
 <!-- history
+1.0.2
+- take out version range. See https://issues.apache.org/jira/browse/MNG-3092
 1.0.1
 - Use version range for osgl dependencies
 1.0.0
@@ -61,7 +63,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <osgl-logging.version>[1.0.0,2.0.0)</osgl-logging.version>
+    <osgl-logging.version>1.0.2</osgl-logging.version>
     <maven.test.skip>false</maven.test.skip>
   </properties>
 
