--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
   ~ under the License.
   -->
 <!-- history
+1.1.3
+- #8 `BeanSpec` force adding `@TypeOf` annotation to Collection conflict with existing value loader annotation
 1.0.2
 - take out version range. See https://issues.apache.org/jira/browse/MNG-3092
 1.0.1
