--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
   ~ under the License.
   -->
 <!-- history
+1.0.3
+* #8 `BeanSpec` force adding `@TypeOf` annotation to Collection conflict with existing value loader annotation
 1.0.2
 - take out version range. See https://issues.apache.org/jira/browse/MNG-3092
 1.0.1
@@ -42,7 +44,7 @@
   <groupId>org.osgl</groupId>
   <artifactId>genie</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.2</version>
+  <version>1.0.3-SNAPSHOT</version>
 
   <name>OSGL Genie</name>
   <description>A JSR330 style dependency injection solution</description>
