--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
   <groupId>org.osgl</groupId>
   <artifactId>genie</artifactId>
   <packaging>jar</packaging>
-  <version>1.1.3</version>
+  <version>1.1.4-SNAPSHOT</version>
 
   <name>OSGL Genie</name>
   <description>A JSR330 style dependency injection solution</description>
