--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
   ~ under the License.
   -->
 <!-- history
+1.2.0
+* catch up to osgl-tool 1.5.0
 1.1.3
 - #8 `BeanSpec` force adding `@TypeOf` annotation to Collection conflict with existing value loader annotation
 1.0.2
@@ -44,7 +46,7 @@
   <groupId>org.osgl</groupId>
   <artifactId>genie</artifactId>
   <packaging>jar</packaging>
-  <version>1.1.4-SNAPSHOT</version>
+  <version>1.2.0-SNAPSHOT</version>
 
   <name>OSGL Genie</name>
   <description>A JSR330 style dependency injection solution</description>
@@ -65,7 +67,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <osgl-logging.version>1.0.3</osgl-logging.version>
+    <osgl-logging.version>1.1.0-SNAPSHOT</osgl-logging.version>
     <maven.test.skip>false</maven.test.skip>
   </properties>
 
