--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright 2013 The OSGL Genie Project
+  ~ Copyright 2016 The OSGL Genie Project
   ~
   ~ The OSGL Genie Project licenses this file to you under the Apache License,
   ~ version 2.0 (the "License"); you may not use this file except in compliance
@@ -21,7 +21,7 @@
   <groupId>org.osgl</groupId>
   <artifactId>genie</artifactId>
   <packaging>jar</packaging>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0-BETA-1-SNAPSHOT</version>
 
   <name>OSGL Genie</name>
   <description>A JSR330 style dependency injection solution</description>
@@ -44,13 +44,17 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+    <maven-javadoc-plugin.version>3.0.0-M1</maven-javadoc-plugin.version>
     <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
     <buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
+    <markdown-doclet.version>1.4</markdown-doclet.version>
     <cdi-api.version>1.2</cdi-api.version>
     <inject.version>1</inject.version>
     <validation-api.version>1.1.0.Final</validation-api.version>
     <guice.version>4.1.0</guice.version>
-    <osgl-ut.version>1.0.0-BETA-3</osgl-ut.version>
+    <osgl-bootstrap.version>1.0.0-BETA-7</osgl-bootstrap.version>
+    <osgl-ut.version>1.0.0-BETA-4</osgl-ut.version>
     <osgl-logging.version>1.0.3</osgl-logging.version>
     <scm.url>git://github.com/osglworks/java-di.git</scm.url>
   </properties>
@@ -163,6 +167,19 @@
           <shortRevisionLength>4</shortRevisionLength>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>${maven-source-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
@@ -173,6 +190,12 @@
       <artifactId>osgl-ut</artifactId>
       <version>${osgl-ut.version}</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.osgl</groupId>
+      <artifactId>osgl-bootstrap</artifactId>
+      <version>${osgl-bootstrap.version}</version>
     </dependency>
 
     <dependency>
@@ -225,20 +248,19 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.9</version>
+            <version>${maven-javadoc-plugin.version}</version>
             <configuration>
               <stylesheetfile>src/etc/javadoc.css</stylesheetfile>
-              <quiet />
-              <additionalparam>-Xdoclint:none</additionalparam>
-              <doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
+              <doclet>ch.raffael.mddoclet.MarkdownDoclet</doclet>
               <docletArtifact>
-                <groupId>ch.raffael.pegdown-doclet</groupId>
-                <artifactId>pegdown-doclet</artifactId>
-                <version>1.3</version>
+                <groupId>ch.raffael.markdown-doclet</groupId>
+                <artifactId>markdown-doclet</artifactId>
+                <version>${markdown-doclet.version}</version>
               </docletArtifact>
               <useStandardDocletOptions>true</useStandardDocletOptions>
               <links>
-                <link>http://junit.org/junit4/javadoc/latest/</link>
+                <link>http://javax-inject.github.io/javax-inject/api/</link>
+                <link>https://docs.oracle.com/javaee/7/api/</link>
               </links>
             </configuration>
             <executions>
@@ -248,30 +270,11 @@
                 <goals>
                   <goal>javadoc</goal>
                 </goals>
-                <configuration>
-                  <failOnError>false</failOnError>
-                </configuration>
               </execution>
               <execution>
                 <id>attach-javadocs</id>
                 <goals>
                   <goal>jar</goal>
-                </goals>
-                <configuration> <!-- add this to disable checking -->
-                  <failOnError>false</failOnError>
-                  <additionalparam>-Xdoclint:none</additionalparam>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-source-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>attach-sources</id>
-                <goals>
-                  <goal>jar-no-fork</goal>
                 </goals>
               </execution>
             </executions>
