--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,9 +15,5 @@ pages:
 - 'Inject collection and map' : 'container.md'
 - 'Inject value' : 'value.md'
 - 'Scoping' : 'scope.md'
-
-- Samples:
-  - 'Implement Spring 4.3 style InjectionPoint style binding' : 'https://github.com/greenlaw110/hello-genie-injectionPoint'
-  - 'Implement Spring 4.3 style customized annotation' : 'https://github.com/greenlaw110/genie-custom-annotation-demo'
-
+- 'Sample projects' : 'sample.md'
 - 'Performance Benchmark' : 'performance.md'
