--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,13 @@
     <maven.compiler.target>1.7</maven.compiler.target>
     <scm.url>git@github.com:osglworks/java-di.git</scm.url>
 
+    <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
     <maven-javadoc-plugin.version>3.0.0-M1</maven-javadoc-plugin.version>
     <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
 
     <buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
+    <checkstyle.version>8.1</checkstyle.version>
     <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
     <errorpone-core.version>2.1.1</errorpone-core.version>
     <license-maven-plugin.version>1.13</license-maven-plugin.version>
@@ -129,12 +131,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.17</version>
+        <version>${maven-checkstyle-plugin.version}</version>
         <dependencies>
           <dependency>
             <groupId>com.puppycrawl.tools</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>8.1</version>
+            <version>${checkstyle.version}</version>
           </dependency>
         </dependencies>
         <configuration>
