--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <groupId>org.osgl</groupId>
   <artifactId>genie</artifactId>
   <packaging>jar</packaging>
-  <version>1.2.1-BETA-3-SNAPSHOT</version>
+  <version>1.3.0-SNAPSHOT</version>
 
   <name>OSGL Genie</name>
   <description>A JSR330 style dependency injection solution</description>
@@ -65,7 +65,7 @@
     <guice.version>4.1.0</guice.version>
     <osgl-bootstrap.version>1.0.0</osgl-bootstrap.version>
     <osgl-ut.version>1.0.0</osgl-ut.version>
-    <osgl-logging.version>1.0.3</osgl-logging.version>
+    <osgl-logging.version>1.1.0-SNAPSHOT</osgl-logging.version>
   </properties>
 
   <scm>
