--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
   <artifactId>genie</artifactId>
   <packaging>jar</packaging>
-  <version>1.8.1-SNAPSHOT</version>
+  <version>1.9.0-SNAPSHOT</version>
 
   <name>OSGL Genie</name>
   <description>A JSR330 style dependency injection solution</description>
@@ -44,7 +44,7 @@
     <inject.version>1</inject.version>
     <validation-api.version>1.1.0.Final</validation-api.version>
     <guice.version>4.2.0</guice.version>
-    <osgl-tool.version>1.15.1</osgl-tool.version>
+    <osgl-tool.version>1.18.0-SNAPSHOT</osgl-tool.version>
     <osgl-logging.version>1.2.0</osgl-logging.version>
   </properties>
 
