--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
   <parent>
     <groupId>org.osgl</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0.0-BETA-1</version>
+    <version>1.0.0-BETA-4</version>
   </parent>
 
   <properties>
@@ -43,8 +43,8 @@
     <cdi-api.version>1.2</cdi-api.version>
     <validation-api.version>1.1.0.Final</validation-api.version>
     <guice.version>4.2.0</guice.version>
-    <osgl-tool.version>1.18.0-SNAPSHOT</osgl-tool.version>
-    <osgl-logging.version>1.2.0</osgl-logging.version>
+    <osgl-tool.version>1.18.0</osgl-tool.version>
+    <osgl-logging.version>1.3.0</osgl-logging.version>
   </properties>
 
   <scm>
