--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <cdi-api.version>1.2</cdi-api.version>
     <validation-api.version>1.1.0.Final</validation-api.version>
     <guice.version>4.2.0</guice.version>
-    <osgl-tool.version>1.19.0</osgl-tool.version>
+    <osgl-tool.version>1.19.1-SNAPSHOT</osgl-tool.version>
     <osgl-logging.version>1.3.0</osgl-logging.version>
   </properties>
 
